--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "esbuild src/index.js --bundle --outfile=dist/main.js"
+    "build": "esbuild src/index.js --bundle --outdir=dist --splitting --format=esm"
   },
   "repository": {
     "type": "git",
